gobmkida/g3/attack2
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/attack2/src/engine/reading.c:3415:7: error: use of undeclared identifier 'CSWTCH_588'
v48 = CSWTCH_588[defense]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/attack2/src/engine/reading.c:3428:7: error: use of undeclared identifier 'CSWTCH_588'
v44 = CSWTCH_588[defense]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/attack2/src/engine/reading.c:3497:23: error: use of undeclared identifier 'unk_4AE301'
v50 = ( const char *)&unk_4AE301; 
                      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/attack2/src/engine/reading.c:3705:23: error: use of undeclared identifier 'unk_4AE355'
v50 = ( const char *)&unk_4AE355; 
                      ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/attack2/src/obj/1/reading.o] Error 1
